--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+MIDTRANS_MERCHANT_ID=xxxxxx
+MIDTRANS_CLIENT_KEY=SB-Mid-client-xxxx
+MIDTRANS_SERVER_KEY=SB-Mid-server-xxxx
+MIDTRANS_IS_PRODUCTION=false
